# opencot

./: CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
examples/: basic_usage.ipynb
src/opencot/: __init__.py  fetch.py  instruments.py  metrics.py  parse.py  types.py
tests/: test_fetch.py  test_instruments.py  test_metrics.py  test_parse.py
